--- a/vercel.json
+++ b/vercel.json
@@ -1,9 +1,10 @@
 {
     "cleanUrls": true,
     "rewrites": [
-        { "source": "/app.js", "destination": "/web/app.js" },
-        { "source": "/styles.css", "destination": "/web/styles.css" },
-        { "source": "/", "destination": "/web/index.html" }
+        { "source": "/api/(.*)", "destination": "/api/$1" },
+        { "source": "/(app\\.js|styles\\.css)", "destination": "/web/$1" },
+        { "source": "/", "destination": "/web/index.html" },
+        { "source": "/(.*)", "destination": "/web/$1" }
     ]
 }
   
