--- a/vercel.json
+++ b/vercel.json
@@ -1,10 +1,12 @@
 {
-    "cleanUrls": true,
-    "rewrites": [
-      { "source": "/api/(.*)", "destination": "/api/$1" },
-      { "source": "/styles.css", "destination": "/web/styles.css" },
-      { "source": "/app.js", "destination": "/web/app.js" },
-      { "source": "/", "destination": "/web/index.html" }
-    ]
+  "version": 2,
+  "cleanUrls": true,
+  "rewrites": [
+    { "source": "/api/(.*)", "destination": "/api/$1" },
+    { "source": "/styles.css", "destination": "/web/styles.css" },
+    { "source": "/app.js", "destination": "/web/app.js" },
+    { "source": "/(?!api)(.*)", "destination": "/web/$1" },
+    { "source": "/", "destination": "/web/index.html" }
+  ]
 }
   
