--- a/vercel.json
+++ b/vercel.json
@@ -5,8 +5,6 @@
     { "source": "/api/(.*)", "destination": "/api/$1" },
     { "source": "/styles.css", "destination": "/web/styles.css" },
     { "source": "/app.js", "destination": "/web/app.js" },
-    { "source": "/(?!api)(.*)", "destination": "/web/$1" },
-    { "source": "/", "destination": "/web/index.html" }
+    { "source": "/(.*)", "destination": "/web/$1" }
   ]
 }
-  
